--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
 
         <body>
 
-            <h1>RECETAS ARGUIÑANO</h1>
+            <h1 class="special"> Recetas Arguiñano</h1>
 
-            <ul>
-                <li><a href="solomillo.html">Receta de solomillo a la pimienta</a>.</li>
+            <ul class="link2">
                 <p>       </p>
-                <img src="solomillo.webp" width="200" height="150"/>
+                <li><a class="link" href="solomillo.html">Receta de solomillo a la pimienta</a>.</li>
                 <p>       </p>
-                <li><a href="patatas.html">Receta de patatas con cheddar y bacon</a></li>
+                <img src="solomillo.webp" width="900" height="500"/>
                 <p>       </p>
-                <img src="cheddar.jpg" width="200" height="150"/>
+                <li><a class="link" href="patatas.html">Receta de patatas con cheddar y bacon</a></li>
+                <p>       </p>
+                <img src="cheddar.jpg" width="900" height="500"/>
             </ul>
 
         <body>
