--- a/patatas.html
+++ b/patatas.html
@@ -7,13 +7,13 @@
         </head>
         <body>
 
-            <h1>Patatas con cheddar y bacon</h1>
+            <h1 class="special2">Patatas con cheddar y bacon</h1>
 
             <img src="cheddar.jpg" width="290" height="180"/>
 
             <h2>Ingredientes</h2>
             
-            <ul>
+            <ul class="inicioespecial">
                 <li><i>Patatas fritas</i></li>
                 <li><i>200 g. de queso cheddar rallado</i></li>
                 <li><i>2 cucharadas de mantequilla a temperatura ambiente</i></li>
@@ -27,7 +27,7 @@
 
             <h2>Elavoración</h2>
 
-            <ol>
+            <ol class="inicioespecial">
                 <li><i>Comenzamos la elaboración de nuestras patatas gajo con queso y bacon, para ello, en una sartén a temperatura media, vamos a agregar el bacon y cocinamos hasta dorar. Reservamos.</i></li>
                 <p>         </p>
                 <li><i>En otra sartén, vamos a colocar la mantequilla hasta derretir, luego agregamos la harina y removemos, seguidamente agregamos la nata e integramos todo muy bien, agregamos el queso cheddar y seguimos removiendo hasta que funda, finalmente agregamos el pimentón en polvo, removemos y dejamos cocinar por 2 minutos. Reservamos.</i></li>
